--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,77 @@
+body {
+  background-image: url(../images/clock-wall.jpg);
+  background-position: fixed;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-top: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(152, 114, 96, 0.75);
+  border-radius: 10px;
+  color: white;
+}
+
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
   text-align: center;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
 }
 
 footer {
-  text-align: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.74);
+  font-weight: 300;
+  background: rgba(147, 93, 79, 0.75);
+  border-radius: 5px;
+  max-width: 600px;
+  margin: 10px auto;
+}
+
+footer strong {
+  color: white;
+}
+
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px solid rgb(94, 65, 51, 0.75);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 14px;
+  vertical-align: middle;
 }
