--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@ h2 {
   font-size: 28px;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 footer {
   font-size: 16px;
   color: rgba(255, 255, 255, 0.74);
